Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gst-plugins-bad gst-plugins-bad
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 973
    • Issues 973
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 104
    • Merge requests 104
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamerGStreamer
  • gst-plugins-badgst-plugins-bad
  • Issues
  • #1619
Closed
Open
Issue created Jul 08, 2021 by MaximDanilov@MaximDanilov

mfvideosrc: Don't present interlace-mode in caps while negotating

gst-launch-1.0.exe -v compositor name=comp ! fakesink videotestsrc ! video/x-raw, widht=1280, height=720, framerate=30/1 ! queue ! comp. mfvideosrc ! video/x-raw, framerate=30/1 ! queue ! comp.

Have issue when running this pipeline. Videotestsrc element produces interlace-mode in caps, so compositor forward that mode to mfvideosrc branch. ksvideosrc works fine with this.

Assignee
Assign to
Time tracking